правка тестового контроллера